# my-shell

./: .csproj  .editorconfig  .gitignore  CMakeLists.txt  README.md  Shell.qml  build.sh  luna-shell.sh  main.cpp  my-shell.csproj  my-shell.sln
frontend/: README.md  dev_emit.mjs  package.json  tsconfig.json
frontend/jsx/: jsx-runtime.d.ts  jsx-runtime.js
frontend/src/: index.tsx  main.cs
frontend/src/components/: Button.tsx
reactivity/: EventSignal.cs  Messager.cs  Signal.cs  State.cs  State.static.cs
